
ElasticSearch-Carrot2 Change Log

================ ElasticSearch-Carrot2 2.1.2 ====================

No changes (ES version compatibility release).

================ ElasticSearch-Carrot2 2.1.1 ====================

No changes (ES version compatibility release).

================ ElasticSearch-Carrot2 2.1.0 ====================

No changes (ES version compatibility release).

================ ElasticSearch-Carrot2 2.0.2 ====================

No changes (ES version compatibility release).

================ ElasticSearch-Carrot2 2.0.1 ====================

No changes (ES version compatibility release).

================ ElasticSearch-Carrot2 2.0.0 ====================

Other changes

* GH-29: Upgrade to ES 2.0.0 (official).

================ ElasticSearch-Carrot2 2.0.0-rc1 ================

Changes in Backwards Compatibility

* GH-23: Plugin code restructured for ES 2.0.0. Versioning
  scheme will now follow ElasticSearch strictly since starting
  from version 2.0.0 plugins must declare an (exact) version
  of ES they were compiled against.
  
* GH-25: Plugin configuration files have been moved to reside
  inside the plugin. They should be automatically installed
  (copied) to ElasticSearch's config/ folder, where they can
  be tweaked.

Other changes

* GH-28: Add support for es/config and plugin/config relative 
  license locations in Lingo3G

* GH-27: Add dependency on morfologik-stemming.

* GH-24: Update JS visualizations in plugin documentation.

* Dropped support for plugin branches 1.7.x and 1.8.x (ES 1.3.x and
  1.4.x).

================ ElasticSearch-Carrot2 1.9.1 ================

Changes in Backwards Compatibility

* Dependency update to Carrot2 3.10.4 (and Lingo3G 1.12.3).

================ ElasticSearch-Carrot2 1.9.0 ================

Changes in Backwards Compatibility

* Dependency update to ES 1.6.0.

* Dependency update to Carrot2 3.10.1 (and Lingo3G 1.12.0).

* Dependency updates (test libraries).
